src/test/ui/argument-suggestions/extra_arguments.stderr
error[E0059]: arguments to this function are incorrect
  --> $DIR/extra_arguments.rs:7:9
   |
LL |   empty("");
   |         ^^
   |         |
   |         this parameter of type &'static str isn't needed for empty
   |         help: removing this argument may help
   |
note: function defined here
  --> $DIR/extra_arguments.rs:1:4
   |
LL | fn empty() {}
   |    ^^^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/extra_arguments.rs:9:14
   |
LL |   one_arg(1, 1);
   |            --^
   |            | |
   |            | this parameter of type {integer} isn't needed for one_arg
   |            help: removing this argument may help
   |
note: function defined here
  --> $DIR/extra_arguments.rs:2:4
   |
LL | fn one_arg(_a: i32) {}
   |    ^^^^^^^ -------

error[E0059]: arguments to this function are incorrect
  --> $DIR/extra_arguments.rs:10:14
   |
LL |   one_arg(1, "");
   |            --^^
   |            | |
   |            | this parameter of type &'static str isn't needed for one_arg
   |            help: removing this argument may help
   |
note: function defined here
  --> $DIR/extra_arguments.rs:2:4
   |
LL | fn one_arg(_a: i32) {}
   |    ^^^^^^^ -------

error[E0059]: multiple arguments to this function are incorrect
  --> $DIR/extra_arguments.rs:11:14
   |
LL |   one_arg(1, "", 1.0);
   |            --^^--^^^
   |            | |   |
   |            | |   this parameter of type {float} isn't needed for one_arg
   |            | this parameter of type &'static str isn't needed for one_arg
   |            help: removing these arguments may help
   |
note: function defined here
  --> $DIR/extra_arguments.rs:2:4
   |
LL | fn one_arg(_a: i32) {}
   |    ^^^^^^^ -------

error[E0059]: arguments to this function are incorrect
  --> $DIR/extra_arguments.rs:13:22
   |
LL |   two_arg_same(1, 1, 1);
   |                    --^
   |                    | |
   |                    | this parameter of type {integer} isn't needed for two_arg_same
   |                    help: removing this argument may help
   |
note: function defined here
  --> $DIR/extra_arguments.rs:3:4
   |
LL | fn two_arg_same(_a: i32, _b: i32) {}
   |    ^^^^^^^^^^^^ -------  -------

error[E0059]: arguments to this function are incorrect
  --> $DIR/extra_arguments.rs:14:22
   |
LL |   two_arg_same(1, 1, 1.0);
   |                    --^^^
   |                    | |
   |                    | this parameter of type {float} isn't needed for two_arg_same
   |                    help: removing this argument may help
   |
note: function defined here
  --> $DIR/extra_arguments.rs:3:4
   |
LL | fn two_arg_same(_a: i32, _b: i32) {}
   |    ^^^^^^^^^^^^ -------  -------

error[E0059]: arguments to this function are incorrect
  --> $DIR/extra_arguments.rs:16:19
   |
LL |   two_arg_diff(1, 1, "");
   |                 --^
   |                 | |
   |                 | this parameter of type {integer} isn't needed for two_arg_diff
   |                 help: removing this argument may help
   |
note: function defined here
  --> $DIR/extra_arguments.rs:4:4
   |
LL | fn two_arg_diff(_a: i32, _b: &str) {}
   |    ^^^^^^^^^^^^ -------  --------

error[E0059]: arguments to this function are incorrect
  --> $DIR/extra_arguments.rs:17:23
   |
LL |   two_arg_diff(1, "", "");
   |                     --^^
   |                     | |
   |                     | this parameter of type &'static str isn't needed for two_arg_diff
   |                     help: removing this argument may help
   |
note: function defined here
  --> $DIR/extra_arguments.rs:4:4
   |
LL | fn two_arg_diff(_a: i32, _b: &str) {}
   |    ^^^^^^^^^^^^ -------  --------

error[E0059]: multiple arguments to this function are incorrect
  --> $DIR/extra_arguments.rs:18:19
   |
LL |   two_arg_diff(1, 1, "", "");
   |                   ^      ^^ this parameter of type &'static str isn't needed for two_arg_diff
   |                   |
   |                   this parameter of type {integer} isn't needed for two_arg_diff
   |
note: function defined here
  --> $DIR/extra_arguments.rs:4:4
   |
LL | fn two_arg_diff(_a: i32, _b: &str) {}
   |    ^^^^^^^^^^^^ -------  --------
help: removing these arguments may help
   |
LL |   two_arg_diff(1, "");
   |                --  --

error[E0059]: multiple arguments to this function are incorrect
  --> $DIR/extra_arguments.rs:19:23
   |
LL |   two_arg_diff(1, "", 1, "");
   |                     --^--^^
   |                     | |  |
   |                     | |  this parameter of type &'static str isn't needed for two_arg_diff
   |                     | this parameter of type {integer} isn't needed for two_arg_diff
   |                     help: removing these arguments may help
   |
note: function defined here
  --> $DIR/extra_arguments.rs:4:4
   |
LL | fn two_arg_diff(_a: i32, _b: &str) {}
   |    ^^^^^^^^^^^^ -------  --------

error[E0059]: arguments to this function are incorrect
  --> $DIR/extra_arguments.rs:22:26
   |
LL |   two_arg_same(1, 1,     "");
   |                    ------^^
   |                    |     |
   |                    |     this parameter of type &'static str isn't needed for two_arg_same
   |                    help: removing this argument may help
   |
note: function defined here
  --> $DIR/extra_arguments.rs:3:4
   |
LL | fn two_arg_same(_a: i32, _b: i32) {}
   |    ^^^^^^^^^^^^ -------  -------

error[E0059]: arguments to this function are incorrect
  --> $DIR/extra_arguments.rs:23:19
   |
LL |   two_arg_diff(1, 1,     "");
   |                 --^
   |                 | |
   |                 | this parameter of type {integer} isn't needed for two_arg_diff
   |                 help: removing this argument may help
   |
note: function defined here
  --> $DIR/extra_arguments.rs:4:4
   |
LL | fn two_arg_diff(_a: i32, _b: &str) {}
   |    ^^^^^^^^^^^^ -------  --------

error[E0059]: arguments to this function are incorrect
  --> $DIR/extra_arguments.rs:27:5
   |
LL |       1,
   |  ______-
LL | |     ""
   | |     ^-
   | |_____||
   |       |help: removing this argument may help
   |       this parameter of type &'static str isn't needed for two_arg_same
   |
note: function defined here
  --> $DIR/extra_arguments.rs:3:4
   |
LL | fn two_arg_same(_a: i32, _b: i32) {}
   |    ^^^^^^^^^^^^ -------  -------

error[E0059]: arguments to this function are incorrect
  --> $DIR/extra_arguments.rs:32:5
   |
LL |       1,
   |  ______-
LL | |     1,
   | |     ^
   | |     |
   | |_____this parameter of type {integer} isn't needed for two_arg_diff
   |       help: removing this argument may help
   |
note: function defined here
  --> $DIR/extra_arguments.rs:4:4
   |
LL | fn two_arg_diff(_a: i32, _b: &str) {}
   |    ^^^^^^^^^^^^ -------  --------

error: aborting due to 14 previous errors

For more information about this error, try `rustc --explain E0059`.
